--- a/AirdPro/app.config
+++ b/AirdPro/app.config
@@ -26,7 +26,7 @@
   </runtime>
   <userSettings>
     <AirdPro.Properties.Settings>
-      <setting name="repository" serializeAs="String">
+      <setting name="Repository" serializeAs="String">
         <value />
       </setting>
       <setting name="ConfigFolder" serializeAs="String">
@@ -37,6 +37,27 @@
       </setting>
       <setting name="PXReposFolder" serializeAs="String">
         <value />
+      </setting>
+      <setting name="LastOutputPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="LastOpenPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="RedisHost" serializeAs="String">
+        <value>127.0.0.1</value>
+      </setting>
+      <setting name="RedisPort" serializeAs="String">
+        <value>6379</value>
+      </setting>
+      <setting name="RedisUsername" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="RedisPassword" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="MaxTasks" serializeAs="String">
+        <value>1</value>
       </setting>
     </AirdPro.Properties.Settings>
   </userSettings>
