--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -388,7 +388,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AirdSDK">
-      <Version>2.0.3.1-beta2</Version>
+      <Version>2.1.1</Version>
     </PackageReference>
     <PackageReference Include="Autoupdater.NET.Official">
       <Version>1.7.6</Version>
