--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -417,11 +417,17 @@
     <PackageReference Include="OptimizedPriorityQueue">
       <Version>5.1.0</Version>
     </PackageReference>
+    <PackageReference Include="OxyPlot.WindowsForms">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="StackExchange.Redis">
       <Version>2.6.70</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
       <Version>7.0.0-preview.2.22152.2</Version>
+    </PackageReference>
+    <PackageReference Include="WeifenLuo.WinFormsUI.Docking">
+      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.4.2</Version>
