--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -428,6 +428,9 @@
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
       <Version>7.0.0-preview.2.22152.2</Version>
     </PackageReference>
+    <PackageReference Include="TreeViewAdv">
+      <Version>1.7.0</Version>
+    </PackageReference>
     <PackageReference Include="WeifenLuo.WinFormsUI.Docking">
       <Version>2.1.0</Version>
     </PackageReference>
