--- a/AirdPro/app.config
+++ b/AirdPro/app.config
@@ -56,8 +56,11 @@
       <setting name="RedisPassword" serializeAs="String">
         <value />
       </setting>
-      <setting name="MaxTasks" serializeAs="String">
+      <setting name="MaxConversionTasks" serializeAs="String">
         <value>1</value>
+      </setting>
+      <setting name="MirrorPairs" serializeAs="String">
+        <value />
       </setting>
     </AirdPro.Properties.Settings>
   </userSettings>
