--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -162,7 +162,14 @@
     <Compile Include="Constants\ResultCode.cs" />
     <Compile Include="Constants\SoftwareInfo.cs" />
     <Compile Include="Constants\UrlConst.cs" />
+    <Compile Include="Controls\MirrorBox\MirrorBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\MirrorBox\MirrorBox.Designer.cs">
+      <DependentUpon>MirrorBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Converters\ConverterWorkFlow.cs" />
+    <Compile Include="Domains\Common\StrKV.cs" />
     <Compile Include="Domains\HardwareInfo\HardwareInfo.cs" />
     <Compile Include="Domains\Logs\AppLogs.cs" />
     <Compile Include="Domains\Logs\Log.cs" />
@@ -174,15 +181,21 @@
     <Compile Include="Domains\Sort\CompressStat.cs" />
     <Compile Include="Domains\Statistic\Stat.cs" />
     <Compile Include="Domains\View\SpectrumRow.cs" />
-    <Compile Include="MSFileBrowser\FolderFileBrowser.cs">
+    <Compile Include="Forms\MirrorTransForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MirrorTransForm.Designer.cs">
+      <DependentUpon>MirrorTransForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\MSFileBrowser\FolderFileBrowser.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="MSFileBrowser\FolderFileBrowser.designer.cs">
+    <Compile Include="Controls\MSFileBrowser\FolderFileBrowser.designer.cs">
       <DependentUpon>FolderFileBrowser.cs</DependentUpon>
     </Compile>
-    <Compile Include="MSFileBrowser\FolderFileBrowserModel.cs" />
-    <Compile Include="MSFileBrowser\MSFileItems.cs" />
-    <Compile Include="MSFileBrowser\FolderFileItemSorter.cs" />
+    <Compile Include="Controls\MSFileBrowser\FolderFileBrowserModel.cs" />
+    <Compile Include="Controls\MSFileBrowser\MSFileItems.cs" />
+    <Compile Include="Controls\MSFileBrowser\FolderFileItemSorter.cs" />
     <Compile Include="Forms\AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -286,11 +299,18 @@
     <Compile Include="Storage\Observer.cs" />
     <Compile Include="Storage\Subject.cs" />
     <Compile Include="Utils\CVUtil.cs" />
+    <Compile Include="Utils\FeatureUtil.cs" />
     <Compile Include="Utils\FileUtil.cs" />
     <Compile Include="Utils\HttpUtil.cs" />
     <Compile Include="Utils\SpectrumUtil.cs" />
     <Compile Include="Utils\StatUtil.cs" />
-    <EmbeddedResource Include="MSFileBrowser\FolderFileBrowser.resx">
+    <EmbeddedResource Include="Controls\MirrorBox\MirrorBox.resx">
+      <DependentUpon>MirrorBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MirrorTransForm.resx">
+      <DependentUpon>MirrorTransForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\MSFileBrowser\FolderFileBrowser.resx">
       <DependentUpon>FolderFileBrowser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ConversionForm.resx">
@@ -351,6 +371,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Ico\AIR.ico" />
+    <Content Include="Resources\Imgs\Arrows.png" />
     <Content Include="Resources\Logo\AIR.png" />
     <Content Include="Resources\Logo\AirdPro.png" />
     <Content Include="Resources\Logo\AirdProLogo.png" />
@@ -369,6 +390,8 @@
     <Content Include="Resources\Menu\Repository.png" />
     <Content Include="Resources\Menu\Spectrum.png" />
     <Content Include="Resources\Menu\Spectrum16x16.png" />
+    <Content Include="Resources\Menu\MirrorTrans.png" />
+    <Content Include="Resources\Menu\SelectFiles.png" />
     <Content Include="Resources\Pay\AliPay.jpg" />
     <Content Include="Resources\Menu\ConversionCenter.png" />
     <Content Include="Resources\Menu\AirdManager.png" />
@@ -404,9 +427,6 @@
     <PackageReference Include="Autoupdater.NET.Official">
       <Version>1.7.6</Version>
     </PackageReference>
-    <PackageReference Include="BetterFolderBrowser">
-      <Version>1.2.0</Version>
-    </PackageReference>
     <PackageReference Include="BrotliSharpLib">
       <Version>0.3.3</Version>
     </PackageReference>
@@ -416,8 +436,8 @@
     <PackageReference Include="HtmlAgilityPack.NetCore">
       <Version>1.5.0.1</Version>
     </PackageReference>
-    <PackageReference Include="iGrid.NET">
-      <Version>2.0.1</Version>
+    <PackageReference Include="HZH_Controls">
+      <Version>1.0.14</Version>
     </PackageReference>
     <PackageReference Include="IronSnappy">
       <Version>1.3.0</Version>
@@ -430,9 +450,6 @@
     </PackageReference>
     <PackageReference Include="OptimizedPriorityQueue">
       <Version>5.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="OxyPlot.WindowsForms">
-      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="StackExchange.Redis">
       <Version>2.6.70</Version>
