--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -424,6 +424,9 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AirdSDK">
+      <Version>2.1.3</Version>
+    </PackageReference>
     <PackageReference Include="Autoupdater.NET.Official">
       <Version>1.7.6</Version>
     </PackageReference>
