--- a/AirdPro/app.config
+++ b/AirdPro/app.config
@@ -62,6 +62,9 @@
       <setting name="MirrorPairs" serializeAs="String">
         <value />
       </setting>
+      <setting name="DeciderWeight" serializeAs="String">
+        <value>1,1,1</value>
+      </setting>
     </AirdPro.Properties.Settings>
   </userSettings>
 </configuration>
