增加代谢组学仓库本地文件读取策略，可以快速获取代谢组学仓库的仓库具体信息条

--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -377,6 +377,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="PSI-MS.obo" />
+    <None Include="Resources\Config\MLConfigFile.json" />
+    <None Include="Resources\Config\MLFastConfigFile.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Ico\AIR.ico" />
