准备构建面向存储的Aird格式

--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -383,6 +383,8 @@
   <ItemGroup>
     <Content Include="Resources\Ico\AIR.ico" />
     <Content Include="Resources\Imgs\Arrows.png" />
+    <Content Include="Resources\Imgs\Computation.png" />
+    <Content Include="Resources\Imgs\SearchEngine.png" />
     <Content Include="Resources\Logo\AIR.png" />
     <Content Include="Resources\Logo\AirdPro.png" />
     <Content Include="Resources\Logo\AirdProLogo.png" />
