--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -27,7 +27,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>4.0.1.%2a</ApplicationVersion>
+    <ApplicationVersion>4.2.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -109,6 +109,10 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup />
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Interop.EDAL, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
@@ -223,11 +227,6 @@
     <Compile Include="Forms\SpectrumForm.Designer.cs">
       <DependentUpon>SpectrumForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="Domains\Repository\FileRow.cs" />
     <Compile Include="Domains\Repository\Project.cs" />
     <Compile Include="Forms\DownloadDetailForm.cs">
@@ -312,6 +311,7 @@
     <Compile Include="Utils\FileUtil.cs" />
     <Compile Include="Utils\HttpUtil.cs" />
     <Compile Include="Utils\DataUtil.cs" />
+    <Compile Include="Utils\ResourceUtil.cs" />
     <Compile Include="Utils\StatUtil.cs" />
     <EmbeddedResource Include="Controls\MirrorBox\MirrorBox.resx">
       <DependentUpon>MirrorBox.cs</DependentUpon>
@@ -345,11 +345,6 @@
     <EmbeddedResource Include="Forms\VendorFileSelectorForm.resx">
       <DependentUpon>VendorFileSelectorForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <SubType>Designer</SubType>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\DownloadDetailForm.resx">
       <DependentUpon>DownloadDetailForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -377,47 +372,125 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="PSI-MS.obo" />
-    <None Include="Resources\Config\MLConfigFile.json" />
-    <None Include="Resources\Config\MLFastConfigFile.json" />
+    <EmbeddedResource Include="Resources\Config\MLConfigFile.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Config\MLFastConfigFile.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\Ico\AIR.ico" />
-    <Content Include="Resources\Imgs\Arrows.png" />
-    <Content Include="Resources\Imgs\Computation.png" />
-    <Content Include="Resources\Imgs\SearchEngine.png" />
-    <Content Include="Resources\Logo\AIR.png" />
-    <Content Include="Resources\Logo\AirdPro.png" />
-    <Content Include="Resources\Logo\AirdProLogo.png" />
-    <Content Include="Resources\Logo\AirdProTrans.png" />
-    <Content Include="Resources\Ico\AIR_01.ico" />
-    <Content Include="Resources\Logo\AIR_01.png" />
-    <Content Include="Resources\Menu\Connected.png" />
-    <Content Include="Resources\Menu\Conversion.png" />
-    <Content Include="Resources\Menu\DirectoryClose.png" />
-    <Content Include="Resources\Menu\DirectoryClose16x16.png" />
-    <Content Include="Resources\Menu\DirectoryClose32x32.png" />
-    <Content Include="Resources\Menu\DirectoryOpen.png" />
-    <Content Include="Resources\Menu\DirectoryOpen16x16.png" />
-    <Content Include="Resources\Menu\DirectoryOpen32x32.png" />
-    <Content Include="Resources\Menu\Help.png" />
-    <Content Include="Resources\Menu\Repository.png" />
-    <Content Include="Resources\Menu\Spectrum.png" />
-    <Content Include="Resources\Menu\Spectrum16x16.png" />
-    <Content Include="Resources\Menu\MirrorTrans.png" />
-    <Content Include="Resources\Menu\SelectFiles.png" />
-    <Content Include="Resources\Pay\AliPay.jpg" />
-    <Content Include="Resources\Menu\ConversionCenter.png" />
-    <Content Include="Resources\Menu\AirdManager.png" />
-    <Content Include="Resources\Menu\CleanFinished.png" />
-    <Content Include="Resources\Menu\CleanErrors.png" />
-    <Content Include="Resources\Menu\DisConnect.png" />
-    <Content Include="Resources\Menu\Files.png" />
-    <Content Include="Resources\Menu\Import.png" />
-    <Content Include="Resources\Brand\MetaboLights.jpg" />
-    <Content Include="Resources\Brand\Proteomexchange.png" />
-    <Content Include="Resources\Menu\Setting.png" />
-    <Content Include="Resources\Menu\Start.png" />
-    <Content Include="Resources\Pay\Weixin.png" />
+    <EmbeddedResource Include="Resources\Ico\AIR.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Imgs\Arrows.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Imgs\Computation.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Imgs\SearchEngine.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Logo\AIR.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Logo\AirdPro.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Logo\AirdProLogo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Logo\AirdProTrans.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Ico\AIR_01.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Logo\AIR_01.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\Connected.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\Conversion.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\DirectoryClose.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\DirectoryClose16x16.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\DirectoryClose32x32.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\DirectoryOpen.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\DirectoryOpen16x16.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\DirectoryOpen32x32.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\Help.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\Repository.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\Spectrum.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\Spectrum16x16.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\MirrorTrans.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\SelectFiles.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Pay\AliPay.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\ConversionCenter.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\AirdManager.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\CleanFinished.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\CleanErrors.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\DisConnect.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\Files.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\Import.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Brand\MetaboLights.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Brand\Proteomexchange.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\Setting.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Menu\Start.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Pay\Weixin.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <Content Include="Version-CN.xml" />
     <Content Include="Version.xml" />
   </ItemGroup>
@@ -438,10 +511,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AirdSDK">
-      <Version>2.1.3</Version>
+      <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="Autoupdater.NET.Official">
-      <Version>1.7.6</Version>
+      <Version>1.7.7</Version>
     </PackageReference>
     <PackageReference Include="BrotliSharpLib">
       <Version>0.3.3</Version>
@@ -462,13 +535,16 @@
       <Version>2.0.15</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.2</Version>
+      <Version>13.0.3</Version>
     </PackageReference>
     <PackageReference Include="OptimizedPriorityQueue">
       <Version>5.1.0</Version>
     </PackageReference>
     <PackageReference Include="StackExchange.Redis">
-      <Version>2.6.90</Version>
+      <Version>2.6.96</Version>
+    </PackageReference>
+    <PackageReference Include="System.Resources.Extensions">
+      <Version>7.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
       <Version>7.0.0-preview.2.22152.2</Version>
@@ -498,5 +574,6 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /Y "$(SolutionDir)ImportLibs\*.*" "$(TargetDir)"</PostBuildEvent>
+    <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
   </PropertyGroup>
 </Project>
