--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -510,58 +510,66 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AirdSDK">
-      <Version>2.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="Autoupdater.NET.Official">
-      <Version>1.7.7</Version>
-    </PackageReference>
-    <PackageReference Include="BrotliSharpLib">
-      <Version>0.3.3</Version>
-    </PackageReference>
-    <PackageReference Include="HDF5DotNet.x64">
-      <Version>1.8.9</Version>
-    </PackageReference>
-    <PackageReference Include="HtmlAgilityPack.NetCore">
-      <Version>1.5.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="HZH_Controls">
-      <Version>1.0.14</Version>
-    </PackageReference>
-    <PackageReference Include="IronSnappy">
-      <Version>1.3.1</Version>
-    </PackageReference>
-    <PackageReference Include="log4net">
-      <Version>2.0.15</Version>
+    <PackageReference Include="MathNet.Numerics">
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.3</Version>
     </PackageReference>
-    <PackageReference Include="OptimizedPriorityQueue">
-      <Version>5.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="StackExchange.Redis">
-      <Version>2.6.96</Version>
-    </PackageReference>
-    <PackageReference Include="System.Resources.Extensions">
-      <Version>7.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>7.0.0-preview.2.22152.2</Version>
-    </PackageReference>
-    <PackageReference Include="TreeViewAdv">
-      <Version>1.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="WeifenLuo.WinFormsUI.Docking">
-      <Version>2.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="xunit">
-      <Version>2.4.2</Version>
-    </PackageReference>
-    <PackageReference Include="ZstdNet">
-      <Version>1.4.5</Version>
-    </PackageReference>
   </ItemGroup>
+  <!-- <ItemGroup> -->
+  <!--   <PackageReference Include="AirdSDK"> -->
+  <!--     <Version>2.2.0</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="Autoupdater.NET.Official"> -->
+  <!--     <Version>1.7.7</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="BrotliSharpLib"> -->
+  <!--     <Version>0.3.3</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="HDF5DotNet.x64"> -->
+  <!--     <Version>1.8.9</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="HtmlAgilityPack.NetCore"> -->
+  <!--     <Version>1.5.0.1</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="HZH_Controls"> -->
+  <!--     <Version>1.0.14</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="IronSnappy"> -->
+  <!--     <Version>1.3.1</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="log4net"> -->
+  <!--     <Version>2.0.15</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="Newtonsoft.Json"> -->
+  <!--     <Version>13.0.3</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="OptimizedPriorityQueue"> -->
+  <!--     <Version>5.1.0</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="StackExchange.Redis"> -->
+  <!--     <Version>2.6.96</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="System.Resources.Extensions"> -->
+  <!--     <Version>7.0.0</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="System.Runtime.CompilerServices.Unsafe"> -->
+  <!--     <Version>7.0.0-preview.2.22152.2</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="TreeViewAdv"> -->
+  <!--     <Version>1.7.0</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="WeifenLuo.WinFormsUI.Docking"> -->
+  <!--     <Version>2.1.0</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="xunit"> -->
+  <!--     <Version>2.4.2</Version> -->
+  <!--   </PackageReference> -->
+  <!--   <PackageReference Include="ZstdNet"> -->
+  <!--     <Version>1.4.5</Version> -->
+  <!--   </PackageReference> -->
+  <!-- </ItemGroup> -->
   <ItemGroup>
     <Folder Include="Test\" />
   </ItemGroup>
@@ -570,6 +578,23 @@
       <Project>{baff498c-afd0-48aa-b859-c421824d0311}</Project>
       <Name>AirdSDK</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Autoupdater.NET.Official" Version="1.7.7" />
+    <PackageReference Include="BrotliSharpLib" Version="0.3.3" />
+    <PackageReference Include="HtmlAgilityPack.NetCore" Version="1.5.0.1" />
+    <PackageReference Include="HZH_Controls" Version="1.0.14" />
+    <PackageReference Include="IronSnappy" Version="1.3.1" />
+    <PackageReference Include="log4net" Version="2.0.15" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="OptimizedPriorityQueue" Version="5.1.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.96" />
+    <PackageReference Include="System.Resources.Extensions" Version="7.0.0" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+    <PackageReference Include="TreeViewAdv" Version="1.7.0" />
+    <PackageReference Include="WeifenLuo.WinFormsUI.Docking" Version="2.1.0" />
+    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="ZstdNet" Version="1.4.5" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
