--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -510,6 +510,9 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AirdSDK">
+      <Version>2.3.0</Version>
+    </PackageReference>
     <PackageReference Include="MathNet.Numerics">
       <Version>5.0.0</Version>
     </PackageReference>
@@ -572,12 +575,6 @@
   <!-- </ItemGroup> -->
   <ItemGroup>
     <Folder Include="Test\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Aird-SDK\CSharpSDK\AirdSDK.csproj">
-      <Project>{baff498c-afd0-48aa-b859-c421824d0311}</Project>
-      <Name>AirdSDK</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autoupdater.NET.Official" Version="1.7.7" />
