--- a/AirdPro/app.config
+++ b/AirdPro/app.config
@@ -1,48 +1,48 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="AirdPro.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="AirdPro.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
-                <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+                <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="protobuf-net" publicKeyToken="257b51d87d2e4d67" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+                <assemblyIdentity name="protobuf-net" publicKeyToken="257b51d87d2e4d67" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+                <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0"/>
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
     <userSettings>
         <AirdPro.Properties.Settings>
             <setting name="Repository" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="ConfigFolder" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="MLReposFolder" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="PXReposFolder" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="LastOutputPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="LastOpenPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="RedisHost" serializeAs="String">
                 <value>127.0.0.1</value>
@@ -51,16 +51,16 @@
                 <value>6379</value>
             </setting>
             <setting name="RedisUsername" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="RedisPassword" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="MaxConversionTasks" serializeAs="String">
                 <value>1</value>
             </setting>
             <setting name="MirrorPairs" serializeAs="String">
-                <value />
+                <value/>
             </setting>
         </AirdPro.Properties.Settings>
     </userSettings>
