--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms\Compressor\ICompressor.cs" />
+    <Compile Include="Algorithms\Compressor\SortIntEmpty.cs" />
     <Compile Include="Algorithms\Compressor\StackComp.cs" />
     <Compile Include="Algorithms\Compressor\CoreComp.cs" />
     <Compile Include="Asyncs\ConvertTaskManager.cs" />
@@ -575,7 +576,7 @@
     <PackageReference Include="HZH_Controls" Version="1.0.14" />
     <PackageReference Include="IronSnappy" Version="1.3.1" />
     <PackageReference Include="log4net" Version="2.0.15" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OptimizedPriorityQueue" Version="5.1.0" />
     <PackageReference Include="protobuf-net" Version="3.2.26" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.96" />
