实现从AcqMethod.xml文件中读取化合物名称的功能

--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -152,6 +152,10 @@
     <Compile Include="Algorithms\Compressor\SortIntEmpty.cs" />
     <Compile Include="Algorithms\Compressor\StackComp.cs" />
     <Compile Include="Algorithms\Compressor\CoreComp.cs" />
+    <Compile Include="Algorithms\Parser\AcqMethod\AcqCompound.cs" />
+    <Compile Include="Algorithms\Parser\AcqMethod\NewDataSet.cs" />
+    <Compile Include="Algorithms\Parser\AcqMethod\AcqMethodParser.cs" />
+    <Compile Include="Algorithms\Parser\AcqMethod\SectionInfo.cs" />
     <Compile Include="Asyncs\ConvertTaskManager.cs" />
     <Compile Include="Asyncs\DownloadTaskManager.cs" />
     <Compile Include="Asyncs\LimitedConcurrencyLevelTaskScheduler.cs" />
