--- a/AirdPro/app.config
+++ b/AirdPro/app.config
@@ -65,6 +65,9 @@
             <setting name="PinPathList" serializeAs="String">
                 <value />
             </setting>
+            <setting name="JobInfoList" serializeAs="String">
+                <value>[]</value>
+            </setting>
         </AirdPro.Properties.Settings>
     </userSettings>
 </configuration>
