--- a/AirdPro/Properties/Settings.settings
+++ b/AirdPro/Properties/Settings.settings
@@ -41,6 +41,9 @@
     <Setting Name="PinPathList" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="JobInfoList" Type="System.String" Scope="User">
+      <Value Profile="(Default)">[]</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
 
