优化下载界面

--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Asyncs\ConvertTaskManager.cs" />
     <Compile Include="Asyncs\LimitedConcurrencyLevelTaskScheduler.cs" />
     <Compile Include="Constants\Activator.cs" />
+    <Compile Include="Constants\Froms.cs" />
     <Compile Include="Constants\Manufacturer.cs" />
     <Compile Include="Constants\Tag.cs" />
     <Compile Include="Constants\Status.cs" />
